--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,17 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "server": "node server.js"
+    "server": "node server.js",
+    "lint": "eslint server.js events"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "socket.io": "^4.7.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.53.0"
   }
 }
